# dep-parser

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
input/pdf_txt/: china_military_report.txt
notes/: ch14_notes.md  complex_tuple.py  complex_tuple_update.py  write.fdb_latexmk  write.fls  write.tex  writeup.fdb_latexmk  writeup.fls  writeup.tex
output/label_mappings/: label_mapping_0.pkl  label_mapping_1.pkl
rec/: download.py  eda.py  test.py  train.py
src/: basics.py  config.py  dataloader.py  dataset.py  demo.py  demo2.py  demo3.py  demo4.py  hfds.py  inference.py  label_mapping.py  mapping_generator.py  nltk_parser.py  parsimony.py  playback.py  preprocess.py  re_engine.py  sample.txt  scrape.py  stone.py  train_test_split.py  vis.py
src/glove/: ds2.py  ds3.py  ds_glove.py  recent_ds.py  test_ds.py  tmp.py  tutorial.py
